[FIX] some bugs
- change dao to jsonb
- add create http handler and dto
- change docker compose in make file
- create swagger
