# docs/swagger.yaml
@@ -21,6 +21,21 @@ definitions:
       updatedDate:
         type: string
     type: object
+  http.CreateUserBody:
+    properties:
+      allow:
+        items:
+          type: string
+        type: array
+      deny:
+        items:
+          type: string
+        type: array
+      roles:
+        items:
+          type: string
+        type: array
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -45,10 +60,60 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/domain.User'
-            type: array
+            $ref: '#/definitions/domain.User'
       summary: get user
+      tags:
+      - user
+    post:
+      consumes:
+      - application/json
+      description: create user
+      parameters:
+      - description: Bearer jwtToken
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: body params
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/http.CreateUserBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.User'
+      summary: create user
+      tags:
+      - user
+  /user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get user by id
+      parameters:
+      - description: Bearer jwtToken
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: user id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.User'
+      summary: get user by id
       tags:
       - user
 schemes:
